<resources>
    <string name="app_name">FriMo</string>

    //主页面
    <string name="main_txt_homepage">首页</string>
    <string name="main_txt_trends">动态</string>
    <string name="main_txt_user">我的</string>

    //注册页面
    <string name="register_top_tab_txt">注册</string>
    <string name="register_phone_txt">请输入手机号码</string>
    <string name="register_password_txt">请输入密码</string>
    <string name="register_vertify_txt">请输入验证码</string>
    <string name="register_getvertify_txt">获取验证码</string>
    <string name="register_btn_confirm">立即注册</string>
    <string name="register_txt_agreeMent">注册代表您同意:</string>
    <string name="register_txt_confirm">《用户协议》</string>

    //登录页面
    <string name="login_top_tab_txt">登录</string>
    <string name="login_btn_confirm">立即登录</string>

  //设置页面
    <string  name="setting_txt_top_title">设置</string>
    <string  name="setting_txt_unlogin">退出登陆</string>

    <string name="header_pulling">下拉可以刷新</string>
    <string name="header_refreshing">正在刷新…</string>
    <string name="header_loading">正在加载…</string>
    <string name="header_release">释放立即刷新</string>
    <string name="header_finish">刷新完成</string>
    <string name="header_failed">刷新失败</string>
    <string name="header_update">上次更新 M-d HH:mm</string>
    <string name="header_secondary">释放进入二楼</string>

    <string name="footer_pulling">上拉加载更多</string>
    <string name="footer_release">释放立即加载</string>
    <string name="footer_loading">正在加载…</string>
    <string name="footer_refreshing">正在刷新…</string>
    <string name="footer_finish">加载完成</string>
    <string name="footer_failed">加载失败</string>
    <string name="footer_nothing">没有更多数据了</string>

</resources>
