<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/unite_top_tab_size"
        android:background="@drawable/home_tab_bg">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/unite_txt_to_top_tab_size"
            android:src="@mipmap/img_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_top_tab_txt"
            android:layout_marginTop="@dimen/unite_txt_to_top_tab_size"
            android:textSize="@dimen/unite_top_tab_txt_size"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@mipmap/head_icon"/>
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_round_corner"
        android:layout_marginTop="70dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/phone"/>
        <View
            android:layout_width="2px"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="#A8A5A5"
            android:layout_marginLeft="6dp"/>
        <EditText
            android:id="@+id/edit_phoneNumber"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:phoneNumber="true"
            android:hint="@string/register_phone_txt"
            android:textColorHint="#E0DFDF"
            android:layout_marginLeft="4dp"
            android:textSize="15sp"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:background="@null"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_round_corner"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/password"/>
        <View
            android:layout_width="2px"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="#A8A5A5"
            android:layout_marginLeft="6dp"/>
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:password="true"
            android:hint="@string/register_password_txt"
            android:textColorHint="#E0DFDF"
            android:layout_marginLeft="4dp"
            android:textSize="15sp"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:background="@null"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_btn_bg_selector"
        android:text="@string/login_btn_confirm"
        android:textSize="16sp"
        android:textColor="#ffffff"/>
</LinearLayout>
